<resources>
    <string name="app_name">FisioSaludApp</string>
    <string name="login_login_txtLogin">Login</string>
    <string name="login_txtPassword">Password</string>
    <string name="login_txt_btnLogin">Login</string>
    <string name="login_txt_btnRegister">Register</string>
    <string name="registerEmployee_txtName">Name</string>
    <string name="registerEmployee_txtSurName">Surname</string>
    <string name="registerEmployee_txtEmail">Email</string>
    <string name="registerEmployee_txtPhone">Phone Number</string>
    <string name="registerEmployee_txtPassword">Password</string>
    <string name="registerEmployee_txtConfirmPassword">Confirm Password</string>
    <string name="registerEmployee_btnRegister">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="patients_txtEmpty">Add Patient</string>
    <string name="patient_item_btnAddAppointment">Add Appointment</string>
    <string name="listAppointment_lblEmptyView">No appointments</string>
    <string name="appointmentItem_btnDiagnosis">Diagnosis</string>
    <string name="diagnosis_lblDescription">Description</string>
    <string name="diagnosis_lblTreatment">Treatment</string>
    <string name="diagnosis_btnSaveDiagnosis">Save</string>
    <string name="formAppointmentsPerDay_lblDate">Insert date to show appointments</string>
    <string name="btnDone">Done</string>
    <string name="addPatient_lblName">Name</string>
    <string name="addPatient_lblSurname">Surname</string>
    <string name="addPatient_lblEmail">Email</string>
    <string name="addPatient_lblPhone">Phone</string>
    <string name="addPatient_lblAddress">Address</string>
    <string name="addPatient_btnSavePatient">Save</string>
    <string name="patientList_btnListAppointment">List Appointment</string>
    <string name="appointmentList_btnDelete">Delete</string>
    <string name="appointmentPerDay_btnDelete">Delete</string>
    <string name="appointmentDaily_btnDelete">Delete</string>
    <string name="msgError_main_form">Invalid data</string>
    <string name="formPerDay_msgValidationDate">Empty field</string>
    <string name="formAddPatient_msgErrorValid">Error, check fields</string>
    <string name="resgisterEmployee_msgDiferentPass">The passwords are different</string>
    <string name="addAppointmentForm_btnSave">Save Appointment</string>
    <string name="bottomNav_daily_appoint">Daily appoint</string>
    <string name="bottomNav_appointDate">Appoint date</string>
    <string name="bottomNav_patients">Patients</string>
    <string name="bottomNav_add_patient">Add Patient</string>
    <string name="registerEmployee_lblFragment">Register employee</string>
    <string name="appointmentsDaily_lblFragment">Daily appointments</string>
    <string name="patients_lblFragment">Patients</string>
    <string name="formAddAppointment_lblFragment">Add appointment</string>
    <string name="listAppointmentPatient_lblFragment">Appointments by patients</string>
    <string name="diagnosis_lblFragment">Diagnosis</string>
    <string name="formAppointmentPerDay_lblFragment">Form appointments by day</string>
    <string name="appointmentsPerDay_lblFragment">Appointment by day</string>
    <string name="formAddPatient_lblFragment">Add patient</string>
    <string name="detailsPatient_lblFragment">Patient details</string>
    <string name="loginFragment_lblFragment">Login</string>
    <string name="call_msgNullResponse">an error has occurred</string>
    <string name="call_onFailure_msg">connection failure</string>
    <string name="onResponse_success_appintmentDelete">Appointment delete</string>
    <string name="onFailure_getDiagnosis_msg">Still not diagnosed</string>
    <string name="onResponse_msgSaveSuccess">Save successfully</string>
    <string name="onFailure_msgLoginIncorrect">The email or password is incorrect</string>
    <string name="hint_txtHint">Date</string>
    <string name="hint_txtTime">Time</string>
    <string name="details_lblName">Name:</string>
    <string name="details_lblSurname">Surname:</string>
    <string name="details_lblEmail">Email:</string>
    <string name="details_lblPhone">Phone:</string>
    <string name="details_lblAddress">Address:</string>
    <string name="formAppoPerDay_hintDate">Date</string>
</resources>
