<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnuAppointmentDaily"
        android:enabled="true"
        android:icon="@drawable/ic_timer"
        android:title="@string/bottomNav_daily_appoint"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuAppointmentDate"
        android:enabled="true"
        android:icon="@drawable/ic_appointment"
        android:title="@string/bottomNav_appointDate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuPatient"
        android:enabled="true"
        android:icon="@drawable/ic_patientmnu"
        android:title="@string/bottomNav_patients"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnuAddPatient"
        android:enabled="true"
        android:icon="@drawable/ic_patient_add"
        android:title="@string/bottomNav_add_patient"
        app:showAsAction="ifRoom" />

</menu>